--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,3 +1,24 @@
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body ul {
+  list-style: none;
+}
+
 .site-layout-content {
   min-height: 280px;
   padding: 24px;
